--- a/templates/job-listings.html
+++ b/templates/job-listings.html
@@ -249,7 +249,7 @@
                                             {{ course.price }}₽
                                         </p>
 
-                                        <a href="" class="custom-btn btn ms-auto">Попробовать</a>
+                                        <a href="{% url 'course_detail' course.pk %}" class="custom-btn btn ms-auto">Попробовать</a>
                                     </div>
                                 </div>
                             </div>
