--- a/templates/course_details.html
+++ b/templates/course_details.html
@@ -108,7 +108,7 @@
                     <div class="job-thumb job-thumb-detail-box bg-white shadow-lg">
                         <div class="d-flex align-items-center">
                             <div class="job-image-wrap d-flex align-items-center bg-white shadow-lg mb-3">
-                                <img src="{{ course.image_url|default:'static/images/jobs/default.jpg' }}"
+                                <img src="{{ course.mini_image_url|default:'static/images/jobs/default.jpg' }}"
                                      class="job-image me-3 img-fluid" alt="">
 
                                 <p class="mb-0">Курс на {{ course.title }}</p>
