--- a/templates/index.html
+++ b/templates/index.html
@@ -394,7 +394,7 @@
                         <div class="job-thumb job-thumb-box">
                             <div class="job-image-box-wrap">
                                 <a href="">
-                                    <img src="{{ course.image_url|default:'static/images/jobs/default.jpg' }}"
+                                    <img src="{{ course.mini_img_url|default:'static/images/jobs/default.jpg' }}"
                                          class="job-image img-fluid" alt="">
                                 </a>
                             </div>
